// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System should call system's emitplatform correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly for several platforms 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6025778.9625 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "987.5723 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2363525108.4050 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398261014.6473 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2328790208.6400 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4761786123.0523 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2294055328.7750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7090576331.6923 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 8`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2259320468.8100 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9384631660.4673 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 10`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2224585629.7400 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11643952129.2773 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 12`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2189850811.5650 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13868537759.0173 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 14`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 15`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2155116016.2750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16058388570.5823 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 16`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 17`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2120381242.8750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18213504586.8573 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 18`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 19`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2085646493.3550 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "20333885829.7323 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 20`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 21`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2050911767.7150 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "22419532323.0873 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 22`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 23`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2016177066.9500 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "24470444090.8023 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 24`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 25`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1981442392.0550 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "26486621157.7523 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 26`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 27`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1946707744.0250 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "28468063549.8073 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 28`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 29`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1911973123.8550 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "30414771293.8323 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 30`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 31`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1877238532.5400 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "32326744417.6873 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 32`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 33`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1842503971.0750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "34203982950.2273 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 34`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 35`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1807769440.4550 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "36046486921.3023 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 36`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 37`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1773034942.6700 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "37854256361.7573 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 38`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 39`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1738300477.7200 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "39627291304.4273 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 40`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6025778.9625 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "987.5723 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5938505.2975 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398261014.6473 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6025778.9625 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2363525108.4050 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5938505.2975 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398261014.6473 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11964284.2600 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5851231.6800 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4761786123.0523 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17902789.5575 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2328790208.6400 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5851231.6800 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4761786123.0523 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "23754021.2375 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5763958.1125 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7090576331.6923 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "29605252.9175 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2294055328.7750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5763958.1125 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7090576331.6923 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "35369211.0300 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 8`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5676684.5950 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9384631660.4673 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "41133169.1425 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2259320468.8100 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5676684.5950 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9384631660.4673 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "46809853.7375 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 10`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5589411.1300 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11643952129.2773 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "52486538.3325 SNAX",
      },
    ],
  },
]
`;

exports[`System should claim rewards 1`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 4,
    "url": "https://snax.one",
    "votes": 1,
  },
]
`;

exports[`System should claim rewards 2`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
    "votes": 0,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [
      "snax",
    ],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
    "votes": 1,
  },
]
`;

exports[`System should claim rewards 3`] = `
Object {
  "base_per_transaction_net_usage": 12,
  "context_free_discount_net_usage_den": 100,
  "context_free_discount_net_usage_num": 20,
  "contract_owner": 1,
  "deferred_trx_expiration_window": 5000,
  "initialized": 1,
  "last_name_close": "2000-01-01T00:00:00.000",
  "last_producer_schedule_size": 1,
  "max_authority_depth": 6,
  "max_block_cpu_usage": 150000000,
  "max_block_net_usage": 1048576,
  "max_inline_action_depth": 4,
  "max_inline_action_size": 4096,
  "max_ram_size": "5368709120",
  "max_transaction_cpu_usage": 15000000,
  "max_transaction_delay": 3888000,
  "max_transaction_lifetime": 15000,
  "max_transaction_net_usage": 524288,
  "min_transaction_cpu_usage": 100,
  "net_usage_leeway": 500,
  "perblock_bucket": 126840,
  "pervote_bucket": 126840,
  "platform_lock_duration": 0,
  "platforms": Array [
    Object {
      "account": "platform1",
      "period": 2,
      "weight": "0.99500000000000000",
    },
    Object {
      "account": "platform2",
      "period": 1,
      "weight": "0.00500000000000000",
    },
    Object {
      "account": "testacc2",
      "period": 1,
      "weight": "0.00000000000000000",
    },
  ],
  "privileged_contracts": 0,
  "resources_market_open": 1,
  "system_parabola_a": 4385772,
  "system_parabola_b": -1324503311,
  "target_block_cpu_usage_pct": 1000,
  "target_block_net_usage_pct": 1000,
  "top_producers_limit": 21,
  "total_activated_stake": "149999990000000",
  "total_bp_reward": "25.3680 SNAX",
  "total_ram_bytes_reserved": 4479551,
  "total_ram_stake": 111307338,
  "total_unpaid_blocks": 4,
}
`;

exports[`System should claim rewards 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12.6840 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12.6840 SNAX",
      },
    ],
  },
]
`;

exports[`System should claim rewards 5`] = `
Object {
  "base_per_transaction_net_usage": 12,
  "context_free_discount_net_usage_den": 100,
  "context_free_discount_net_usage_num": 20,
  "contract_owner": 1,
  "deferred_trx_expiration_window": 5000,
  "initialized": 1,
  "last_name_close": "2000-01-01T00:00:00.000",
  "last_producer_schedule_size": 1,
  "max_authority_depth": 6,
  "max_block_cpu_usage": 150000000,
  "max_block_net_usage": 1048576,
  "max_inline_action_depth": 4,
  "max_inline_action_size": 4096,
  "max_ram_size": "5368709120",
  "max_transaction_cpu_usage": 15000000,
  "max_transaction_delay": 3888000,
  "max_transaction_lifetime": 15000,
  "max_transaction_net_usage": 524288,
  "min_transaction_cpu_usage": 100,
  "net_usage_leeway": 500,
  "perblock_bucket": 126840,
  "pervote_bucket": 126840,
  "platform_lock_duration": 0,
  "platforms": Array [
    Object {
      "account": "platform1",
      "period": 2,
      "weight": "0.99500000000000000",
    },
    Object {
      "account": "platform2",
      "period": 1,
      "weight": "0.00500000000000000",
    },
    Object {
      "account": "testacc2",
      "period": 1,
      "weight": "0.00000000000000000",
    },
  ],
  "privileged_contracts": 0,
  "resources_market_open": 1,
  "system_parabola_a": 4385772,
  "system_parabola_b": -1324503311,
  "target_block_cpu_usage_pct": 1000,
  "target_block_net_usage_pct": 1000,
  "top_producers_limit": 21,
  "total_activated_stake": "149999990000000",
  "total_bp_reward": "25.3680 SNAX",
  "total_ram_bytes_reserved": 4479551,
  "total_ram_stake": 111307338,
  "total_unpaid_blocks": 4,
}
`;

exports[`System should claim rewards 6`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 4,
    "url": "https://snax.one",
    "votes": 1,
  },
]
`;

exports[`System should claim rewards 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12.6840 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12.6840 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should claim rewards 8`] = `
Object {
  "base_per_transaction_net_usage": 12,
  "context_free_discount_net_usage_den": 100,
  "context_free_discount_net_usage_num": 20,
  "contract_owner": 1,
  "deferred_trx_expiration_window": 5000,
  "initialized": 1,
  "last_name_close": "2000-01-01T00:00:00.000",
  "last_producer_schedule_size": 1,
  "max_authority_depth": 6,
  "max_block_cpu_usage": 150000000,
  "max_block_net_usage": 1048576,
  "max_inline_action_depth": 4,
  "max_inline_action_size": 4096,
  "max_ram_size": "5368709120",
  "max_transaction_cpu_usage": 15000000,
  "max_transaction_delay": 3888000,
  "max_transaction_lifetime": 15000,
  "max_transaction_net_usage": 524288,
  "min_transaction_cpu_usage": 100,
  "net_usage_leeway": 500,
  "perblock_bucket": 0,
  "pervote_bucket": 126840,
  "platform_lock_duration": 0,
  "platforms": Array [
    Object {
      "account": "platform1",
      "period": 2,
      "weight": "0.99500000000000000",
    },
    Object {
      "account": "platform2",
      "period": 1,
      "weight": "0.00500000000000000",
    },
    Object {
      "account": "testacc2",
      "period": 1,
      "weight": "0.00000000000000000",
    },
  ],
  "privileged_contracts": 0,
  "resources_market_open": 1,
  "system_parabola_a": 4385772,
  "system_parabola_b": -1324503311,
  "target_block_cpu_usage_pct": 1000,
  "target_block_net_usage_pct": 1000,
  "top_producers_limit": 21,
  "total_activated_stake": "149999990000000",
  "total_bp_reward": "25.3680 SNAX",
  "total_ram_bytes_reserved": 4479551,
  "total_ram_stake": 111307338,
  "total_unpaid_blocks": 0,
}
`;

exports[`System should claim rewards 9`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 1,
  },
]
`;

exports[`System should fail to vote for non-unique producers 1`] = `"assertion failure with message: producers must be unique"`;

exports[`System should fail to vote for non-unique producers 2`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0,
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc1",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0,
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc2",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0,
  },
]
`;

exports[`System should fail to vote for non-unique producers 3`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
    "votes": 0,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
    "votes": 0,
  },
]
`;

exports[`System should initialize system correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "499979825.7603 SNAX",
      },
    ],
  },
]
`;

exports[`System should send correct amounts to special accounts after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "499979825.7603 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
]
`;

exports[`System should set platforms 1`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018492,
}
`;

exports[`System should set platforms 2`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018492,
}
`;

exports[`System should set platforms 3`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018492,
}
`;

exports[`System should set platforms 4`] = `
Object {
  "cpu_weight": 1000000,
  "net_weight": 1000000,
  "ram_quota": 900000,
}
`;

exports[`System should set platforms 5`] = `
Object {
  "cpu_weight": 10000,
  "net_weight": 1000000,
  "ram_quota": 1000000,
}
`;

exports[`System should set platforms 6`] = `
Object {
  "cpu_weight": 70000,
  "net_weight": 1000000,
  "ram_quota": 1100000,
}
`;

exports[`System should vote for producers and claim rewards 1`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0.458333,
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc1",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0.333333,
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc2",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0.208333,
  },
]
`;

exports[`System should vote for producers and claim rewards 2`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
    "votes": 0,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [
      "",
      "",
      "",
      "",
      "snax",
      "testacc1",
      "testacc2",
    ],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
    "votes": 0.833333,
  },
]
`;

exports[`System should vote for producers and claim rewards 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should vote for producers and claim rewards 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12.6840 SNAX",
      },
    ],
  },
]
`;

exports[`System should vote for producers and claim rewards 5`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0.390243,
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc1",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0.341463,
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc2",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
    "votes": 0.268292,
  },
]
`;

exports[`System should vote for producers and claim rewards 6`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
    "votes": 0,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [
      "",
      "",
      "snax",
      "testacc1",
      "testacc2",
    ],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
    "votes": 0.487804,
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "net_weight": "1000.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "990.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "net_weight": "990.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "net_weight": "1000.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "net_weight": "1000.0000 SNAX",
        "owner": "testacc2",
        "ram_bytes": 1018492,
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 7`] = `"assertion failure with message: insufficient staked net bandwidth"`;

exports[`System should work correctly with delegatebw system after initialization 8`] = `"assertion failure with message: insufficient staked cpu bandwidth"`;

exports[`System should work correctly with delegatebw system after initialization 9`] = `"assertion failure with message: insufficient staked cpu bandwidth"`;

exports[`System should work correctly with delegatebw system after initialization 10`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "10.0000 SNAX",
        "from": "testacc1",
        "net_weight": "10.0000 SNAX",
        "to": "testacc1",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1390.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "880.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "990.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1400.0000 SNAX",
        "net_weight": "890.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1400.0000 SNAX",
        "net_weight": "890.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 12`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "10.0000 SNAX",
        "from": "testacc1",
        "net_weight": "10.0000 SNAX",
        "to": "testacc1",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1280.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "640.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "990.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1290.0000 SNAX",
        "net_weight": "650.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1290.0000 SNAX",
        "net_weight": "650.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system 1`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 2`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "11999999200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "2999999800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system 4`] = `
Array [
  Array [
    Object {
      "amount": "14999999000.0000 SNAX",
      "initial_amount": "14999999000.0000 SNAX",
      "owner": "snax.team",
      "period_count": 10,
    },
  ],
]
`;

exports[`System should work correctly with escrow system after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "11700199200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "1800799800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system after initialization 2`] = `
Array [
  Array [
    Object {
      "amount": "13500999000.0000 SNAX",
      "initial_amount": "14999999000.0000 SNAX",
      "owner": "snax.team",
      "period_count": 10,
    },
  ],
]
`;

exports[`System should work correctly with escrow system after initialization 3`] = `
Array [
  Array [
    Object {
      "amount": "20.0000 SNAX",
      "initial_amount": "20.0000 SNAX",
      "owner": "test.transf",
      "period_count": 10,
    },
  ],
]
`;
